Updated templates for more responsive design and added webhook registering

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -53,3 +53,15 @@ body {
 .error-box {
    margin-top: 8%;
 }
+
+@media only screen and (max-width: 1000px) {
+    #token-header {
+        font-size: 3vw;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    #token-header {
+        font-size: 2vw;
+    }
+}
