--- a/app/templates/user/signin.html
+++ b/app/templates/user/signin.html
@@ -12,13 +12,25 @@
 	    	{{ m.render_field(form.email) }}
 	    	{{ m.render_field(form.password) }}
 		  	{{ form.csrf_token }}
-		  	<button class="ui primary button" type="submit">Confirm</button>
+		  	<button class="ui primary button" type="submit" id="submit">Confirm</button>
 		  	<a href="/user/forgot">
 			  	<div class="ui floated right basic red button">
 	        		I forgot my password
 	    		</div>
 	    	</a>
+	    	<a href="/user/resend">
+	    		<div class="ui floated right basic red button">
+	        		Resend email verification
+	    		</div>
+	    	</a>
 		</form>
 	</div>
+    <script type=text/javascript>
+        $(document).ready(function(){
+            $('#submit').click(function(){
+                $(this).addClass('loading');
+            });
+        })
+    </script>
 
 {% endblock %}
