--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,7 +4,7 @@
 	<body id="container">
    		<div id="header">
    			{% block head %}
-				<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
+				<meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no'/>
 				<meta charset="UTF-8">
 				<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
                 <link rel="stylesheet" href="{{ url_for('static', filename='css/loader.css') }}">
@@ -24,8 +24,9 @@
 				<title>{{ title }}</title>
 				<!-- Navbar -->
 				<div class="ui attached inverted menu">
-				  	{{ m.nav_link('index', 'Home') }}
+				  	{{ m.nav_link('index', 'MusicRoom') }}
 					{{ m.nav_link('contact', 'Contact') }}
+                    {{ m.nav_link('web_hook_setup', 'Setup') }}
 				 	<div class="right menu">
 				 		<!-- User is logged in -->
 				      	{% if current_user.is_authenticated %}
