Added average color to background

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -112,7 +112,7 @@
             body.css({
                 "background-repeat": "no-repeat",
                 "background-position": "center",
-                "background-size": "cover",
+{#                "background-size": "",#}
                 "min-height": "100%",
                 "padding-top": "20px",
                 "padding-bottom": "20px",
@@ -127,12 +127,16 @@
             });
         }
 
-        function fadeIt(song_name, artist_name, artwork_url, twitter_username, song_url,loaded) {
+        function fadeIt(song_name, artist_name, artwork_url, twitter_username, song_url, avg_color, loaded) {
             details.fadeTo(800, 0, function(){
                 if (loaded === false){
                     stylize();
                 }
                 body.css('background-image', artwork_url);
+                console.log(avg_color);
+                if (avg_color !== undefined) {
+                    body.css('background-color', avg_color);
+                }
                 if (twitter_username !== undefined){
                     twitter.html('Requested by ' + twitter_username + ' via <i id="twitter-icon" class="twitter icon"></i>')
                 }
@@ -154,18 +158,23 @@
             var song_name = JSON.stringify(data.message.song_name).replace(/\"/g, "");
             var song_url = JSON.stringify(data.message.song_url).replace(/\"/g, "");
             var twitter_username = JSON.stringify(data.message.song_requester);
+            var avg_color = JSON.stringify(data.message.average_color);
+            console.log(avg_color);
             if (twitter_username !== undefined){
                 twitter_username = twitter_username.replace(/\"/g, "");
+            }
+            if (avg_color !== undefined){
+                avg_color = avg_color.replace(/\"/g, "");
             }
             var song_artwork_url = 'url(' + artwork_url + ')';
             if (loaded === false){
                 // Change the two text spans to correct style and hide p element
                 p.fadeOut();
-                fadeIt(song_name, artist_name, song_artwork_url, twitter_username, song_url, loaded);
+                fadeIt(song_name, artist_name, song_artwork_url, twitter_username, song_url, avg_color, loaded);
                 loaded = true;
             }
             else {
-                fadeIt(song_name, artist_name, song_artwork_url, twitter_username, song_url, loaded);
+                fadeIt(song_name, artist_name, song_artwork_url, twitter_username, song_url, avg_color, loaded);
             }
         });
 
