--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -38,6 +38,7 @@
 				    		</div>
 			          	<!-- User is not logged in -->
 			          	{% else %}
+                            <div class="right menu">
 			          		<div class="item">
 				        		<a class="ui primary button" href="/user/signin">Sign in</a>
 				    		</div>
